examples/test/testpolicy16115.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16115
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key17: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value6
          key47: value11
          key35: value14
      podSelector:
        matchLabels:
          key14: value5
          key19: value4
